--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ dependencies = [
     "ass (>=0.5.4,<0.6.0)",
     "tqdm (>=4.67.1,<5.0.0)",
     "opencv-python (>=4.11.0.86,<5.0.0.0)",
+    "jupyter (>=1.1.1,<2.0.0)",
+    "matplotlib (>=3.10.0,<4.0.0)",
+    "polars (>=1.21.0,<2.0.0)",
+    "notebook (>=7.3.2,<8.0.0)",
 ]
 
 
